build/log/idf_py_stderr_output_5859
Command: make -j 10 all
/home/fus/Documents/DO-AN-02/comDriver/i2c/i2c.c:3:9: note: '#pragma message: i2c.c is compiling...'
    3 | #pragma message("i2c.c is compiling...")
      |         ^~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:10:9: note: '#pragma message: oled128x64.c is compiling...'
   10 | #pragma message("oled128x64.c is compiling...")
      |         ^~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c: In function 'oledResetView':
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:132:46: warning: passing argument 2 of 'i2cSetTransmitBuffer' discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
  132 |     ret = i2cSetTransmitBuffer(oled->i2cDev, cmds, sizeof(cmds));
      |                                              ^~~~
In file included from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64Definitions.h:4,
                 from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:6:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:62:49: note: expected 'void *' but argument is of type 'const uint8_t *' {aka 'const unsigned char *'}
   62 | def i2cSetTransmitBuffer(i2cDev_t * dev, void * txdPtr, size_t size);
      |                                          ~~~~~~~^~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h: At top level:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:31:23: warning: 'i2cHandleSDAIsr' defined but not used [-Wunused-function]
   31 | static void IRAM_ATTR i2cHandleSDAIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:22:23: warning: 'i2cHandleSCLIsr' defined but not used [-Wunused-function]
   22 | static void IRAM_ATTR i2cHandleSCLIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/do-an-02.c:2:13: note: '#pragma message: ESP32_DEVICE_MODE: SENDER'
    2 |     #pragma message("ESP32_DEVICE_MODE: SENDER")
      |             ^~~~~~~
In file included from /home/fus/Documents/DO-AN-02/main/do-an-02.c:3:
/home/fus/Documents/DO-AN-02/main/sender.h: In function 'changeModeButtonISR':
/home/fus/Documents/DO-AN-02/main/sender.h:240:20: warning: variable 'lastNegEdgeTime' set but not used [-Wunused-but-set-variable]
  240 |     static int64_t lastNegEdgeTime = 0;
      |                    ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/do-an-02.c: At top level:
/home/fus/Documents/DO-AN-02/main/do-an-02.c:6:13: note: '#pragma message: ESP32_DEVICE_MODE: RECEIVER'
    6 |     #pragma message("ESP32_DEVICE_MODE: RECEIVER")
      |             ^~~~~~~
In file included from /home/fus/Documents/DO-AN-02/main/do-an-02.c:7:
/home/fus/Documents/DO-AN-02/main/receiver.h:25:1: warning: ignoring attribute 'section (".iram1.6")' because it conflicts with previous 'section (".iram1.4")' [-Wattributes]
   25 | void IRAM_ATTR buttonISR(void* pv){
      | ^~~~
/home/fus/Documents/DO-AN-02/main/sender.h:25:16: note: previous declaration here
   25 | void IRAM_ATTR buttonISR(void* pv){
      |                ^~~~~~~~~
/home/fus/Documents/DO-AN-02/main/receiver.h:25:16: error: redefinition of 'buttonISR'
   25 | void IRAM_ATTR buttonISR(void* pv){
      |                ^~~~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h:25:16: note: previous definition of 'buttonISR' with type 'void(void *)'
   25 | void IRAM_ATTR buttonISR(void* pv){
      |                ^~~~~~~~~
/home/fus/Documents/DO-AN-02/main/receiver.h:42:6: error: redefinition of 'ledTest'
   42 | void ledTest(void *pv){
      |      ^~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h:42:6: note: previous definition of 'ledTest' with type 'void(void *)'
   42 | void ledTest(void *pv){
      |      ^~~~~~~
/home/fus/Documents/DO-AN-02/main/receiver.h:106:6: error: redefinition of 'oledTask'
  106 | void oledTask(void *pv){
      |      ^~~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h:106:6: note: previous definition of 'oledTask' with type 'void(void *)'
  106 | void oledTask(void *pv){
      |      ^~~~~~~~
/home/fus/Documents/DO-AN-02/main/receiver.h:138:5: error: redefinition of 'sendDataFrame'
  138 | def sendDataFrame(uint8_t byteData, uint8_t * rcvdByteData){
      |     ^~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h:138:5: note: previous definition of 'sendDataFrame' with type 'def(uint8_t,  uint8_t *)' {aka 'long int(unsigned char,  unsigned char *)'}
  138 | def sendDataFrame(uint8_t byteData, uint8_t * rcvdByteData){
      |     ^~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/receiver.h:192:6: error: redefinition of 'prepairNSendDataTask'
  192 | void prepairNSendDataTask(void *pv){
      |      ^~~~~~~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h:192:6: note: previous definition of 'prepairNSendDataTask' with type 'void(void *)'
  192 | void prepairNSendDataTask(void *pv){
      |      ^~~~~~~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/receiver.h:223:1: warning: ignoring attribute 'section (".iram1.7")' because it conflicts with previous 'section (".iram1.5")' [-Wattributes]
  223 | void IRAM_ATTR changeModeButtonISR(void* pv) {
      | ^~~~
/home/fus/Documents/DO-AN-02/main/sender.h:223:16: note: previous declaration here
  223 | void IRAM_ATTR changeModeButtonISR(void* pv) {
      |                ^~~~~~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/receiver.h:223:16: error: redefinition of 'changeModeButtonISR'
  223 | void IRAM_ATTR changeModeButtonISR(void* pv) {
      |                ^~~~~~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h:223:16: note: previous definition of 'changeModeButtonISR' with type 'void(void *)'
  223 | void IRAM_ATTR changeModeButtonISR(void* pv) {
      |                ^~~~~~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/receiver.h: In function 'changeModeButtonISR':
/home/fus/Documents/DO-AN-02/main/receiver.h:240:20: warning: variable 'lastNegEdgeTime' set but not used [-Wunused-but-set-variable]
  240 |     static int64_t lastNegEdgeTime = 0;
      |                    ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/receiver.h: At top level:
/home/fus/Documents/DO-AN-02/main/receiver.h:277:5: error: redefinition of 'modeSwitch'
  277 | def modeSwitch(){
      |     ^~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h:277:5: note: previous definition of 'modeSwitch' with type 'def(void)' {aka 'long int(void)'}
  277 | def modeSwitch(){
      |     ^~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/receiver.h:375:6: error: redefinition of 'modeControlTask'
  375 | void modeControlTask(void * pv){
      |      ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h:375:6: note: previous definition of 'modeControlTask' with type 'void(void *)'
  375 | void modeControlTask(void * pv){
      |      ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/do-an-02.c: In function 'app_main':
/home/fus/Documents/DO-AN-02/main/do-an-02.c:102:41: warning: passing argument 2 of 'sendDataFrame' discards 'volatile' qualifier from pointer target type [-Wdiscarded-qualifiers]
  102 |         sendDataFrame(currentDataFrame, &receivedByteData);
      |                                         ^~~~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/receiver.h:138:47: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'volatile uint8_t *' {aka 'volatile unsigned char *'}
  138 | def sendDataFrame(uint8_t byteData, uint8_t * rcvdByteData){
      |                                     ~~~~~~~~~~^~~~~~~~~~~~
In file included from /home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/oled128x64.h:4,
                 from /home/fus/Documents/DO-AN-02/main/sender.h:4:
/home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/../i2c/i2c.h: At top level:
/home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/../i2c/i2c.h:31:23: warning: 'i2cHandleSDAIsr' defined but not used [-Wunused-function]
   31 | static void IRAM_ATTR i2cHandleSDAIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/../i2c/i2c.h:22:23: warning: 'i2cHandleSCLIsr' defined but not used [-Wunused-function]
   22 | static void IRAM_ATTR i2cHandleSCLIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
In file included from /home/fus/Documents/DO-AN-02/main/sender.h:3:
/home/fus/Documents/DO-AN-02/main/../comDriver/spi/spi.h:195:23: warning: 'spiHandleCSIsr' defined but not used [-Wunused-function]
  195 | static void IRAM_ATTR spiHandleCSIsr(void* pv) {
      |                       ^~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/../comDriver/spi/spi.h:124:23: warning: 'spiHandleCLKIsr' defined but not used [-Wunused-function]
  124 | static void IRAM_ATTR spiHandleCLKIsr(void* pv) {
      |                       ^~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/do-an-02.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7427: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
